--- a/HelixJam/Assembly-CSharp.csproj
+++ b/HelixJam/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BasicCamera.cs" />
+     <Compile Include="Assets\Scripts\ControlledWave.cs" />
      <Compile Include="Assets\Scripts\Wave.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity5.5.0f3/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
