--- a/HelixJam/Assembly-CSharp.csproj
+++ b/HelixJam/Assembly-CSharp.csproj
@@ -48,12 +48,14 @@
   <ItemGroup>
      <Compile Include="Assets\Cube.cs" />
      <Compile Include="Assets\Scripts\BasicCamera.cs" />
+     <Compile Include="Assets\Scripts\CenterLine.cs" />
      <Compile Include="Assets\Scripts\ControlledWave.cs" />
      <Compile Include="Assets\Scripts\CubeManager.cs" />
      <Compile Include="Assets\Scripts\Wave.cs" />
      <Compile Include="Assets\Scripts\WaveMaster.cs" />
      <Compile Include="Assets\Wall.cs" />
      <Compile Include="Assets\WallManager.cs" />
+     <None Include="Assets\Shaders\Center.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity5.5.0f3/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
