--- a/HelixJam/Assembly-CSharp.csproj
+++ b/HelixJam/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BasicCamera.cs" />
+     <Compile Include="Assets\Scripts\CenterLine.cs" />
      <Compile Include="Assets\Scripts\ControlledWave.cs" />
      <Compile Include="Assets\Scripts\Cube.cs" />
      <Compile Include="Assets\Scripts\CubeManager.cs" />
@@ -56,6 +57,7 @@
      <Compile Include="Assets\Scripts\WallManager.cs" />
      <Compile Include="Assets\Scripts\Wave.cs" />
      <Compile Include="Assets\Scripts\WaveMaster.cs" />
+     <None Include="Assets\Shaders\Center.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity_5_3_5f1/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
